trying to fix text alignment

--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -58,12 +58,12 @@ body {
     margin: 0;
 }
 
-.body {
-    text-align: right;
-}
-
 h1 {
     color: darkblue;
+    text-align: center;
+}
+
+section div p {
     text-align: center;
 }
 
